--- a/Finance Simulation/index.html
+++ b/Finance Simulation/index.html
@@ -1,111 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Investment Portfolio Dashboard</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<link rel="stylesheet" href="styles.css">
-<!-- Custom fonts for this template-->
-<link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-<link
-    href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-    rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Investment Portfolio Dashboard</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
 
+  <!-- Custom fonts for this template-->
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link
+      href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+      rel="stylesheet">
 
 </head>
+
+
 <body>
 <div class="dashboard-container">
+    <!-- Title Section -->
     <div class="title">Investment Portfolio</div>
-    <div class="col-xl- col-md- mb-4">
-        <div class="card border-left-success shadow h-100 py-2">
-            <div class="card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                        <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                            Current Cash Balance</div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">$100,000</div>
-                    </div>
-                    <div class="col-auto">
-                        <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="market-condition">Market Condition: Bull</div>
 
-    <div class="current-year">Current Year: 10/40</div>
-    <div class="assets-and-allocation">
-        <div class="asset1">
-            <div class="asset1">
-                <div class="header">Asset</div>
-                <div class="asset">
-                    <div>Cash</div>
-                    <div>Stock 1</div>
-                    <div>Stock 2</div>
-                    <div>SGS Bond</div>
-                    <div>S&P 500 ETF</div>
-                    <div>Dogecoin</div>
-                </div>
-            </div>
-        </div>
+    <!-- News and Overview Section -->
+    <div class="dashboard-overview">
+      <button type="button" class="news-button" data-bs-toggle="modal" data-bs-target="#exampleModal">News</button>
+      <div class="overview-items">
+          <div class="current-cash">Current Cash Balance: $100,000</div>
+          <div class="current-year">Current Year: 10/40</div>
+          <div class="market-condition">Market Condition: Bull</div>
+      </div>
+  </div>
 
-        <div class="perallocated">
-            <!-- ... % Allocated div content ... -->
-            <div class="perallocated">
-                <div class="header">% Allocated</div>
-                <div class="percentallocated">
-                    <input type="number" name="cash-allocated" placeholder="Cash" class="input-box" min="0" max="100">
-                    <input type="number" name="stock1-allocated" placeholder="Stock 1" class="input-box" min="0" max="100">
-                    <input type="number" name="stock2-allocated" placeholder="Stock 2" class="input-box" min="0" max="100">
-                    <input type="number" name="sgs-bond-allocated" placeholder="SGS Bond" class="input-box" min="0" max="100">
-                    <input type="number" name="sp500-allocated" placeholder="S&P 500 ETF" class="input-box" min="0" max="100">
-                    <input type="number" name="dogecoin-allocated" placeholder="Dogecoin" class="input-box" min="0" max="100">
-                    <a href="#" class="btn btn-success btn-icon-split">
-                        <span class="icon text-white-50">
-                            <i class="fas fa-check"></i>
-                        </span>
-                        <span class="text" id="simulateButton" onclick="validateTotal()">Simulate</span>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- <div class="dashboard-overview">
+      <button type="button" class="news-button" data-bs-toggle="modal" data-bs-target="#exampleModal">News</button>
+       Current Cash Balance -->
+      <!-- <div class="parameter-card">
+          <div class="card-body cash-balance">
+              <div class="card-content">
+                  <div class="card-text">
+                      <div class="parameter-title">Current Cash Balance</div>
+                      <div class="parameter-value">$100,000</div>
+                  </div>
+                  <div class="card-icon cash-icon"></div>
+              </div>
+          </div>
+      </div>
+       -->
+      <!-- Current Year -->
+      <!-- <div class="parameter-card">
+          <div class="card-body current-year">
+              <div class="card-content">
+                  <div class="card-text">
+                      <div class="parameter-title">Current Year</div>
+                      <div class="parameter-value">10/40</div>
+                  </div>
+                  <div class="card-icon year-icon"></div>
+              </div>
+          </div>
+      </div>
+       -->
+      <!-- Market Condition -->
+      <!-- <div class="parameter-card">
+          <div class="card-body market-condition">
+              <div class="card-content">
+                  <div class="card-text">
+                      <div class="parameter-title">Market Condition</div>
+                      <div class="parameter-value">Bull</div>
+                  </div>
+                  <div class="card-icon market-icon"></div>
+              </div>
+          </div>
+      </div>
+  </div> -->
+
+    <!-- Input Parameters Section -->
+    <div class="input-section">
+      <div class="assets-and-allocation">
+          <div class="asset1">
+              <div class="header">Asset</div>
+              <div class="asset">
+                  <div>Cash</div>
+                  <div>Stock 1</div>
+                  <div>Stock 2</div>
+                  <div>SGS Bond</div>
+                  <div>S&P 500 ETF</div>
+                  <div>Dogecoin</div>
+              </div>
+          </div>
+          <div class="perallocated">
+              <div class="header">% Allocated</div>
+              <div class="percentallocated">
+                  <input type="number" name="cash-allocated" placeholder="Cash" class="input-box" min="0" max="100">
+                  <input type="number" name="stock1-allocated" placeholder="Stock 1" class="input-box" min="0" max="100">
+                  <input type="number" name="stock2-allocated" placeholder="Stock 2" class="input-box" min="0" max="100">
+                  <input type="number" name="sgs-bond-allocated" placeholder="SGS Bond" class="input-box" min="0" max="100">
+                  <input type="number" name="sp500-allocated" placeholder="S&P 500 ETF" class="input-box" min="0" max="100">
+                  <input type="number" name="dogecoin-allocated" placeholder="Dogecoin" class="input-box" min="0" max="100">
+              </div>
+          </div>
+      </div>
+      <button class="simulate-button">Simulate</button>
     </div>
 
-  <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary custom-button-size" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    News
-  </button>
+    <!-- Graph Section -->
+    <div class="graph-section">
+      <canvas id="myChart"></canvas>
+  </div>
+</div>
   
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body" id="modalText">
-          <p>News Goes heree!</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+
+<!-- Other Functions: Buttons, Graphs, Popup -->
+    <!-- News Button Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body" id="modalText">
+            <p>News Goes heree!</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div>
-    <canvas id="myChart"></canvas>
-  </div>
-  
+  <!-- Charting -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  
   <script>
     const ctx = document.getElementById('myChart');
-  
     new Chart(ctx, {
       type: 'line',
       data: {
@@ -125,9 +151,9 @@
       }
     });
   </script>
-    </div>
-</div>
+
 <script src="index.js"> charset="utf-8"</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
 </html>
