--- a/Finance Simulation/index.html
+++ b/Finance Simulation/index.html
@@ -97,7 +97,7 @@
               </div>
           </div>
       </div>
-      <button class="simulate-button">Simulate</button>
+      <button class="simulate-button" id="simulateButton" onclick="validateTotal()">Simulate</button>
     </div>
 
     <!-- Graph Section -->
@@ -130,7 +130,7 @@
     </div>
 
   <!-- Charting -->
-
+  
   <!-- Include Chart.js from a CDN -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
