Added variable id

--- a/Finance Simulation/index.html
+++ b/Finance Simulation/index.html
@@ -31,7 +31,7 @@
               <div class="d-flex justify-content-between align-items-center w-100">
                   <div class="text-container">
                       <div class="parameter-title">Current Cash Balance</div>
-                      <div class="parameter-value">$100,000</div>
+                      <div id="currentCashBalance" class="parameter-value">$100,000</div>
                   </div>
                   <div class="icon-container">
                       <i class="fas fa-dollar-sign icon-custom"></i>
@@ -46,7 +46,7 @@
               <div class="d-flex justify-content-between align-items-center w-100">
                   <div class="text-container">
                       <div class="parameter-title">Current Year</div>
-                      <div class="parameter-value">10/40</div>
+                      <div id="currentYear" class="parameter-value">10/40</div>
                   </div>
                   <div class="icon-container">
                       <i class="fas fa-calendar-alt icon-custom"></i>
@@ -61,7 +61,7 @@
               <div class="d-flex justify-content-between align-items-center w-100">
                   <div class="text-container">
                       <div class="parameter-title">Market Condition</div>
-                      <div class="parameter-value">Bull</div>
+                      <div id="marketCondition" class="parameter-value">Bull</div>
                   </div>
                   <div class="icon-container">
                       <i class="fas fa-chart-line icon-custom"></i>
