--- a/Finance Simulation/selection.html
+++ b/Finance Simulation/selection.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Investment Portfolio Dashboard</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
-
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link
-      href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-      rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 </head>
 
+
 <body>
-<div class="dashboard-container">
-  <!-- Title Section -->
-  <div class="game-title">Investment Portfolio</div>
-  
+  <div class="container mx-auto px-4">
+    <h1 class="game-title text-3xl text-center font-bold mb-8">Investment Portfolio</h1>
+    <div class="flex flex-col md:flex-row justify-center items-center gap-8">
+      <!-- Card 1 -->
+      <div class="bg-white text-black p-6 rounded-lg shadow-lg">
+        <img class="mb-4" src="https://placehold.co/300x200.png" alt="Financial chart for portfolio 1">
+        <p class="text-sm">
+          veraaaaaaaaaaaaaaaaaaaaaaaaaaaa<br>
+          vrwwwwwwwwwwwwwwwwwwww<br>
+          text text text text
+        </p>
+        <button class="btn-risk" onclick="window.location.href='index.html'" >High-Risk Takers</button>
+      </div>
+      <!-- Card 2 -->
+      <div class="bg-white text-black p-6 rounded-lg shadow-lg">
+        <img class="mb-4" src="https://placehold.co/300x200.png" alt="Financial chart for portfolio 2">
+        <p class="text-sm">
+          veraaaaaaaaaaaaaaaaaaaaaaaaaaaa<br>
+          vrwwwwwwwwwwwwwwwwwwww<br>
+          text text text text
+        </p>
+        <button class="btn-norisk" onclick="window.location.href='index.html'" >Risk Averse</button>
+      </div>
+    </div>
+  </div>
+  <!-- Bootstrap JS and its dependencies are optional, remove if you're not using Bootstrap-specific components -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
-</html>
