--- a/Finance Simulation/index.html
+++ b/Finance Simulation/index.html
@@ -97,7 +97,7 @@
               </div>
           </div>
       </div>
-      <button class="simulate-button" id="simulateButton" onclick="validateTotal()">Simulate</button>
+      <button class="simulate-button" id="simulateButton" onclick="validateTotal()">Simulate!</button>
     </div>
 
     <!-- Graph Section -->
