--- a/Finance Simulation/selection.html
+++ b/Finance Simulation/selection.html
@@ -25,7 +25,7 @@
           vrwwwwwwwwwwwwwwwwwwww<br>
           text text text text
         </p>
-        <button class="btn-risk" onclick="window.location.href='index.html'" >High-Risk Takers</button>
+        <button class="btn-risk" onclick="window.location.href='index.html'" >High-Risk Takers!</button>
       </div>
       <!-- Card 2 -->
       <div class="bg-white text-black p-6 rounded-lg shadow-lg">
@@ -35,7 +35,7 @@
           vrwwwwwwwwwwwwwwwwwwww<br>
           text text text text
         </p>
-        <button class="btn-norisk" onclick="window.location.href='index.html'" >Risk Averse</button>
+        <button class="btn-norisk" onclick="window.location.href='index.html'" >Risk Averse!</button>
       </div>
     </div>
   </div>
