--- a/Finance Simulation/selection.html
+++ b/Finance Simulation/selection.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="container mx-auto px-4">
-    <h1 class="game-title text-3xl text-center font-bold mb-8">Investment Portfolio</h1>
+    <h1 class="game-title text-3xl text-center font-bold my-8">Investment Portfolio</h1>
     <div class="flex flex-col md:flex-row justify-center items-center gap-8">
       <!-- Card 1 -->
       <div class="bg-white text-black p-6 rounded-lg shadow-lg">
