--- a/Finance Simulation/selection.html
+++ b/Finance Simulation/selection.html
@@ -19,7 +19,7 @@
     <div class="flex flex-col md:flex-row justify-center items-center gap-8">
       <!-- Card 1 -->
       <div class="bg-white text-black p-6 rounded-lg shadow-lg">
-        <img class="mb-4" src="https://placehold.co/300x200.png" alt="Financial chart for portfolio 1">
+        <img class="mb-4 img-300x200" src="images/high-risk.png" alt="Financial chart for portfolio 1">
         <p class="text-sm">
           veraaaaaaaaaaaaaaaaaaaaaaaaaaaa<br>
           vrwwwwwwwwwwwwwwwwwwww<br>
@@ -29,7 +29,7 @@
       </div>
       <!-- Card 2 -->
       <div class="bg-white text-black p-6 rounded-lg shadow-lg">
-        <img class="mb-4" src="https://placehold.co/300x200.png" alt="Financial chart for portfolio 2">
+        <img class="mb-4 img-300x200" src="images/safety.png" alt="Financial chart for portfolio 2">
         <p class="text-sm">
           veraaaaaaaaaaaaaaaaaaaaaaaaaaaa<br>
           vrwwwwwwwwwwwwwwwwwwww<br>
