--- a/Finance Simulation/index.html
+++ b/Finance Simulation/index.html
@@ -87,11 +87,11 @@
           <div class="perallocated">
               <div class="header">% Allocated</div>
               <div class="percentallocated">
-                  <input type="number" name="stock1-allocated" placeholder="Stock 1" class="input-box" min="0" max="100">
-                  <input type="number" name="stock2-allocated" placeholder="Stock 2" class="input-box" min="0" max="100">
-                  <input type="number" name="sgs-bond-allocated" placeholder="SGS Bond" class="input-box" min="0" max="100">
+                  <input type="number" name="stock1-allocated" placeholder="Nvidia" class="input-box" min="0" max="100">
+                  <input type="number" name="stock2-allocated" placeholder="Coca cola" class="input-box" min="0" max="100">
+                  <input type="number" name="sgs-bond-allocated" placeholder="T Bond" class="input-box" min="0" max="100">
                   <input type="number" name="sp500-allocated" placeholder="S&P 500 ETF" class="input-box" min="0" max="100">
-                  <input type="number" name="dogecoin-allocated" placeholder="Dogecoin" class="input-box" min="0" max="100">
+                  <input type="number" name="dogecoin-allocated" placeholder="Bitcoin" class="input-box" min="0" max="100">
               </div>
           </div>
       </div>
