--- a/Finance Simulation/selection.html
+++ b/Finance Simulation/selection.html
@@ -22,11 +22,11 @@
         <img class="mb-4 img-300x200" src="images/high-risk.png" alt="Financial chart for portfolio 1">
         <p class="text-sm">
           High-Risk Allocation Constraints:<br>
-          - Stock 1: 20% to 100%<br>
-          - Stock 2: 10% to 100%<br>
-          - SGS Bond: 0% to 50%<br>
+          - Nvidia: 20% to 100%<br>
+          - Coca cola: 10% to 100%<br>
+          - T Bond: 0% to 50%<br>
           - S&P 500 ETF: 5% to 100%<br>
-          - Dogecoin: 0% to 70%<br>
+          - Bitcoin: 0% to 70%<br>
         </p>
         <button class="btn-risk" id="btnHighRisk" onclick="window.location.href='index.html?risk=high'" >High-Risk Takers!</button>
       </div>
@@ -35,11 +35,11 @@
         <img class="mb-4 img-300x200" src="images/safety.png" alt="Financial chart for portfolio 2">
         <p class="text-sm">
           Risk Averse Allocation Constraints:<br>
-          - Stock 1: 5% to 15%<br>
-          - Stock 2: 5% to 25%<br>
-          - SGS Bond: 5% to 15%<br>
-          - S&P 500 ETF: 40% to 95%<br>
-          - Dogecoin: 0% to 5%<br>
+          - Nvidia: 5% to 15%<br>
+          - Coca cola: 5% to 25%<br>
+          - T Bond: 40% to 95%<br>
+          - S&P 500 ETF: 5% to 15%<br>
+          - Bitcoin: 0% to 5%<br>
         </p>
         <button class="btn-norisk" id="btnNoRisk" onclick="window.location.href='index.html?risk=low'" >Risk Averse!</button>
       </div>
