--- a/Finance Simulation/index.html
+++ b/Finance Simulation/index.html
@@ -77,11 +77,11 @@
           <div class="asset1">
               <div class="header">Asset</div>
               <div class="asset">
-                  <div>Stock 1</div>
-                  <div>Stock 2</div>
-                  <div>SGS Bond</div>
+                  <div>Nvidia</div>
+                  <div>Coca cola</div>
+                  <div>T Bond</div>
                   <div>S&P 500 ETF</div>
-                  <div>Dogecoin</div>
+                  <div>Bitcoin</div>
               </div>
           </div>
           <div class="perallocated">
