add cash balance bar plot

--- a/Finance Simulation/index.html
+++ b/Finance Simulation/index.html
@@ -104,6 +104,8 @@
       <canvas id="myChart" class="my-chart"></canvas>
       <!-- Second Graph Canvas -->
       <canvas id="mySecondChart" class="my-chart"></canvas>
+      <!-- Third Graph Canvas -->
+      <canvas id="myThirdChart" class="my-chart"></canvas>
   </div>
 </div>
   
