--- a/Finance Simulation/index.html
+++ b/Finance Simulation/index.html
@@ -90,7 +90,7 @@
                   <input type="number" name="nvidia-allocated" placeholder="Nvidia" class="input-box" min="0" max="100">
                   <input type="number" name="coca-cola-allocated" placeholder="Coca cola" class="input-box" min="0" max="100">
                   <input type="number" name="t-bond-allocated" placeholder="T Bond" class="input-box" min="0" max="100">
-                  <input type="number" name="sp500-allocated" placeholder="S&P 500 ETF" class="input-box" min="0" max="100">
+                  <input type="number" name="s&p-500-etf-allocated" placeholder="S&P 500 ETF" class="input-box" min="0" max="100">
                   <input type="number" name="bitcoin-allocated" placeholder="Bitcoin" class="input-box" min="0" max="100">
               </div>
           </div>
