added profile information card on dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -96,6 +96,15 @@
           </div>
       </div>
       <button class="simulate-button" id="simulateButton" onclick="validateTotal()">Simulate</button>
+      <!-- Profile Information Card -->
+      <div class="profile-info-card card-custom my-4">
+        <div class="card-body">
+          <h3 class="profile-title card-title">Profile Information</h3>
+          <div class="profile-details">
+            <!-- Profile details will be dynamically inserted here -->
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Graph Section -->
