add resey button

--- a/dashboard.html
+++ b/dashboard.html
@@ -105,6 +105,7 @@
           </div>
         </div>
       </div>
+      <button class="reset-button" id="resetButton" onclick="resetPage()">Reset</button>
     </div>
 
     <!-- Graph Section -->
